--- a/templates/base.html
+++ b/templates/base.html
@@ -366,14 +366,7 @@
                 </div>
             </li>
             <li>
-                <a href="#"><i class="fas fa-chart-bar"></i> Estadísticas <i class="fa fa-caret-down"></i></a>
-                <div class="submenu">
-                    <a href="/estadisticas/dashboard/"><i class="fa fa-tachometer-alt"></i> Dashboard</a>
-                    <a href="/estadisticas/ventas-dia/"><i class="fa fa-calendar-day"></i> Ventas</a>
-                    <a href="/estadisticas/ventas-dia/"><i class="fa fa-calendar-day"></i> Compras</a>
-                    <a href="/estadisticas/ganancias/"><i class="fa fa-dollar-sign"></i> Ganancias</a>
-                    <a href="/estadisticas/graficas/"><i class="fa fa-chart-line"></i> Gráficas</a>
-                </div>
+                <a href="{% url 'dashboard' %}"><i class="fas fa-chart-bar"></i> Dashboard</a>
             </li>
             <li>
                 <a href="/admin/"><i class="fas fa-user-shield"></i> Administración</a>
